[package]
name = "anno"
version = "0.1.0"
edition = "2021"
description = "Annotates each line of a file according to one or more annotation data producers"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.19"
url = "2.4.0"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color"] }
