[package]
name = "anno"
version = "0.1.0"
edition = "2021"
description = "Annotates each line of a file according to one or more annotation data producers"
authors = ["J. Ryan Stinnett <jryans@gmail.com>"]
repository = "https://github.com/jryans/anno"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
duct = "0.13.6"
env_logger = "0.10.0"
gimli = "0.27.3"
log = "0.4.19"
memmap2 = "0.7.1"
object = "0.31.1"
path-absolutize = "3.1.0"
url = "2.4.0"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color"] }

[profile.dev]
split-debuginfo = "packed"
