[package]
name = "anno-debug-vars-locatable"
version = "0.1.0"
edition = "2021"
authors = ["J. Ryan Stinnett <jryans@gmail.com>"]
repository = "https://github.com/jryans/anno"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.72"
debuginfo-quality = { path = "../../../debuginfo-quality" }
env_logger = "0.10.0"
gimli = "0.16.1"
log = "0.4.19"
memmap2 = "0.7.1"
object = "0.31.1"
typed-arena = "1"

[profile.dev]
split-debuginfo = "packed"
