[package]
name = "anno-source-vars-must-be-defined"
version = "0.1.0"
edition = "2021"
authors = ["J. Ryan Stinnett <jryans@gmail.com>"]
repository = "https://github.com/jryans/anno"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.72"
duct = "0.13.6"
env_logger = "0.10.0"
log = "0.4.19"

[profile.dev]
split-debuginfo = "packed"
